# knowledge-product-factory

./: .env.example  .gitignore  AGENTIC_KPF.md  AGENTIC_QUICKSTART.md  AGENTIC_README.md  AGENT_IMPLEMENTATION_GUIDE.md  BUILD_SUMMARY.md  DOCUMENTATION_INDEX.md  PROMPTS.md  QUICK_REFERENCE_CARD.md  README.md  SAMPLE_RUN_WALKTHROUGH.md  START_HERE.md  TEMPLATE_LIBRARY.md  pyproject.toml
kpf/: __init__.py  config.py  logger.py  main.py  paths.py  settings.py
kpf/agents/: __init__.py  artifacts.py  base.py  competitors.py  discovery.py  drafting.py  intake.py  launch.py  outline.py  packaging.py  pain.py  personalization.py  retrospective.py  scoring.py  spending.py  strategy.py  synthesis.py  validation.py
kpf/cli/: __init__.py  export.py  inspect.py  review.py  run.py
kpf/memory/: failed_niches.json  format_performance.json  winning_niches.json
kpf/models/: __init__.py  adapter_base.py  anthropic_adapter.py  gemini_adapter.py  mock_adapter.py  openai_adapter.py
kpf/orchestrator/: __init__.py  agent_orchestrator.py  engine.py  gates.py  router.py  state.py
kpf/prompts/artifacts/: generate_artifact.md  system.md  task.md  validator.md
kpf/prompts/competitors/: system.md  task.md  validator.md
kpf/prompts/discovery/: system.md  task.md  validator.md
kpf/prompts/drafting/: system.md  task.md  validator.md
kpf/prompts/intake/: system.md  task.md  validator.md
kpf/prompts/launch/: system.md  task.md  validator.md
kpf/prompts/outline/: system.md  task.md  validator.md
kpf/prompts/packaging/: system.md  task.md  validator.md
kpf/prompts/pain/: system.md  task.md  validator.md
kpf/prompts/personalization/: system.md  task.md  validator.md
kpf/prompts/retrospective/: system.md  task.md  validator.md
kpf/prompts/scoring/: system.md  task.md  validator.md
kpf/prompts/spending/: system.md  task.md  validator.md
kpf/prompts/strategy/: system.md  task.md  validator.md
kpf/prompts/synthesis/: system.md  task.md  validator.md
kpf/prompts/validation/: system.md  task.md  (+1 more)
kpf/schemas/: __init__.py  artifact_manifest.py  competitor_map.py  knowledge_base.py  launch_assets.py  niche_candidate.py  opportunity_score.py  outline.py  package_manifest.py  pain_map.py  personalization_spec.py  product_brief.py  run_config.py  spending_signal.py  validation_report.py
kpf/storage/: __init__.py  artifact_store.py  db.py  memory_store.py  run_store.py
kpf/templates/: gumroad_listing.md.j2  lead_magnet.md.j2  package_manifest.json.j2  sales_page.md.j2
kpf/utils/: __init__.py  dates.py  files.py  json_io.py  markdown.py  slug.py  text.py
runs/2026-03-06_kpf-discovery-bootstrap/: discovery_report.json  process_state.md  run_config.json
tests/: __init__.py  conftest.py  test_agents_smoke.py  test_gates.py  test_orchestrator.py  test_schemas.py
tests/fixtures/: artifact_manifest.json  competitor_map.json  knowledge_base.json  launch_assets.json  niche_candidate_list.json  opportunity_score.json  outline.json  package_manifest.json  pain_map.json  personalization_spec.json  product_brief.json  spending_signals_report.json  validation_report.json
