[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kpf"
version = "0.1.0"
description = "Knowledge Product Factory CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.8.0",
  "rich>=13.7.0",
  "jinja2>=3.1.4"
]

[project.scripts]
kpf = "kpf.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["kpf*"]
exclude = ["runs*", "briefs*", "products*", "tests*"]
