[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-product-factory"
version = "0.1.0"
description = "CLI-driven multi-agent system for knowledge product creation"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "anthropic>=0.28.0",
    "openai>=1.35.0",
    "jinja2>=3.1.4",
    "rich>=13.7.0",
    "orjson>=3.10.0",
    "sqlmodel>=0.0.19",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
kpf = "kpf.main:app"

[tool.hatch.build.targets.wheel]
packages = ["kpf"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
